<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/nav_report" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/alert"
            android:title="@string/nav_alert" />
    </group>



</menu>